<resources>
    <string name="app_name">SubmissionPemula</string>
    <string-array name="nama_masjid">
        <item>Masjid Agung Baiturrahman</item>
        <item>Masjid Istiqlal</item>
        <item>Masjid Nasional Al-Akbar</item>
        <item>Masjid Islamic Center</item>
        <item>Masjid Kubah Emas</item>
        <item>Masjid Agung An-Nur</item>
        <item>Masjid Agung Jawa Tengah</item>
        <item>Masjid Rahmatan Lil Alamin</item>
        <item>Masjid Al Safar</item>
        <item>Masjid Al Irsyad</item>
    </string-array>
    <string name="tahun_masjid">Tahun Berdiri: </string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="lokasi_masjid">Lokasi Masjid: </string>
    <string name="deskripsi_masjid">Deskripsi Masjid:</string>
    <string name="tahun">Tahun</string>
    <string name="lokasi">Lokasi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="nama_saya">Zaki Mukhammad</string>
    <string name="email">zakimuhammad20@gmail.com</string>
    <string name="about_me">About Me</string>
</resources>