<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_detail_masjid"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_margin="12dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/masjid_alirsyad"/>

                <TextView
                    android:id="@+id/tv_nama_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_detail_masjid"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/nama_masjid"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_nama_detail"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/lokasi_masjid"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_lokasi_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_nama_detail"
                    android:layout_toEndOf="@id/tv_lokasi"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/lokasi"
                    android:textSize="18sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_tahun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lokasi_detail"
                    android:layout_marginStart="12dp"
                    android:text="@string/tahun_masjid"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_year_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_lokasi_detail"
                    android:layout_toEndOf="@id/tv_tahun"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/tahun"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/deskripsi_masjid"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_desc"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/deskripsi"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>