<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AkunActivity">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="12dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">
            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/about_me"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfil"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@id/about"
                android:src="@drawable/foto"/>

            <TextView
                android:id="@+id/tvNamaKu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgProfil"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/nama_saya"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNamaKu"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>